fixed styles light/dark mode, refactored filtering in slice

--- a/src/components/core/EmployeeEdit/EmployeeEdit.module.css
+++ b/src/components/core/EmployeeEdit/EmployeeEdit.module.css
@@ -15,7 +15,7 @@
     max-width: 80vw;
     border: 1px solid var(--c-main);
     padding: clamp(16px, 5vw, 32px);
-    background-color: #000;
+    background-color: var(--bg-main);
     -webkit-border-radius: 2vw;
     -moz-border-radius: 2vw;
     border-radius: 2vw;
@@ -41,7 +41,9 @@
         border: none;
         border-radius: 6px;
         width: 100%;
-        background-color: #3d3d3d;
+        background-color: var(--bg-input);
+        font-size: clamp(12px, 2vw, 18px);
+        color: var(--c-text);
     }
 
     button {
